# mldevops_exercise

./: .pre-commit-config.yaml  AdvancedMachineLearning_1.ipynb  advancedmachinelearning_1.py  advancedmachinelearning_2.py  pyproject.toml
